[package]
name = "pq-age"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
hkdf = "0.12"
rand = "0.10.0"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
